# chat_backend

./: pyproject.toml  seed.py
app/: main.py
app/agents/: agent_main.py  events.py  main_agent.py
app/agents/database/: __init__.py  base.py  mysql.py  postgres.py
app/agents/prompts/: database_agent.md  main_agent.md
app/agents/subagents/: database_agent.py
app/core/: config.py  database.py  security.py
app/crud/: __init__.py  conversation.py  department.py  message.py  user.py
app/models/: __init__.py  conversation.py  department.py  message.py  user.py
app/router/: __init__.py  chat.py  conversation.py  department.py  message.py  user.py
app/schemas/: __init__.py  conversation.py  department.py  message.py  user.py
